# Datathon_2026

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Further Data Plan.md  INSTALL_README.md  LICENSE  QUERY_EVALUATION_2026-04-19.md  README.md  baseline_mvp.md  docker-compose.yml  environment.yml  pyproject.toml
analysis/: REPORT.md  REPORT_v2.md  addendum.py  factcheck.py  factcheck2.py  profile.py  profile_v2.py
app/: config.py  main.py
app/api/: deps.py
app/auth/: __init__.py  csrf.py  db.py  passwords.py  (+2 more)
docs/: CHALLENGE.md  DATASET.md  DEPLOYMENT.md  DEVELOPMENT.md  INSTALLATION.md  USAGE.md  bm25-fts5-report.md  hard-filter-mvp-report.md  pipeline-flowchart.md  visual-search-rrf-report.md
enrichment/: FINAL_REPORT.md  README.md  REPORT.md  schema.py
eval/: queries_mvp.jsonl  report_mvp.md
image_search/: README.md
mahbod/: PLAN.md
presentation/: README.md  deck.typ
ranking/: README.md  schema.py
scripts/: download_s3_images.py  eval_mvp.py  explore_sample.py  install_dataset.py  migrate_db_to_app_schema.py
side-challenges/: anthropic.md
tests/: conftest.py  test_api.py  test_auth.py  test_auth_security.py  test_bootstrap.py  test_dinov2_search.py  test_enriched_import.py  test_fts5.py  test_hard_fact_extraction.py  test_hard_filters.py  test_interactions.py  test_landmark_proximity.py  test_landmarks.py  test_listings_personalized.py  test_listings_route.py  test_match_explain.py  test_memory_profile.py  test_memory_rankings.py  test_memory_summary.py  test_migrate.py  test_normalize.py  test_nway_rrf.py  test_query_plan_mvp.py  test_ranking_mvp.py  test_relaxation_mvp.py  test_retrieval_mvp.py  test_s3.py  test_search_service.py  test_similar_route.py  test_soft_signals.py  test_text_embed_search.py  test_visual_search.py
(+176 files in other folders)
